# sms_remarketing

./: .env  .env.example  ARCHITECTURE.md  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 6c446228cb4b_initial_migration.py
src/sms_remarketing/: __init__.py  config.py  database.py  main.py
src/sms_remarketing/api/: __init__.py  clients.py  credits.py  leads.py  messages.py  templates.py  triggers.py  webhooks.py
src/sms_remarketing/middleware/: __init__.py  auth.py
src/sms_remarketing/models/: __init__.py  client.py  lead.py  message.py  template.py  trigger.py
src/sms_remarketing/schemas/: __init__.py  client.py  lead.py  message.py  template.py  trigger.py
src/sms_remarketing/services/: __init__.py  queue_service.py  sms_service.py  twilio_service.py
src/sms_remarketing/workers/: __init__.py  jobs.py  rq_worker.py  trigger_processor.py  worker.py
